@@ -1,3 +1,12 @@
+2021-05-13  Dmitry Bezhetskov  <dbezhetskov@igalia.com>
+
+        Add dbezhetskov as a commiter
+        https://bugs.webkit.org/show_bug.cgi?id=225742
+
+        Reviewed by Caio Araujo Neponoceno de Lima.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2021-05-13  Tim Horton  <timothy_horton@apple.com>
 
         ResizeReversePaginatedWebView fails on some OS versions on some hardware
